2020-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/utils.cc (class MagickState): Set DiskResource limit to
	zero so that pixel cache won't spill over to using temporary
	files.

2020-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news to the date November 16, 2020.

2020-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Fix memory leak due to CDATA block,
	and some other possible small leaks.

	* magick/magick.c (InitializeMagickEx): Set C pre-processor
	definition USE_GLIBC_MTRACE to 1 in order to enable Linux mtrace
	support.

	* magick/render.c (ConvertPathToPolygon): Fix memory leak upon
	memory reallocation failure.  Addresses oss-fuzz 27351
	"Direct-leak in _MagickReallocateResourceLimitedMemory".

	* magick/memory.c (_MagickReallocateResourceLimitedMemory): Return
	pointer to the allocation similar to realloc() and do not
	automatically free existing memory upon allocation failure.

2020-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* common.shi.in: Apply some resource limits while running the test
	suite.
	(Q8_MEMORY_LIMIT): Set the test suite memory limit to 128MB for
	Q8, or 256MB for Q16, or 512MB for the Q32 build.
	(MAGICK_LIMIT_DISK): Set the test suite disk space limit to 0 to
	avoid spilling over into disk files when the memory limit runs
	out.

	* coders/miff.c (WriteMIFFImage): Update to use resource-limit
	respecting memory allocators.

2020-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Update to use resource-limit
	respecting memory allocators.

	* magick/render.c (DrawImage): Update to use resource-limit
	respecting memory allocators.

	* magick/memory.c (_MagickReallocateResourceLimitedMemory): Add
	new private interfaces for allocating private memory while
	respecting resource limits.

2020-10-25  Bob Friesenhahn  <bfriesen@bobsdell>

	* magick/render.c (DrawImage): Reject pattern image with a